# carnage

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  carnage.cabal
Carnage/: Carnage.hs
Carnage/Carnage/: Discovery.hs  Embeds.hs  Internal.hs  Models.hs  Root.hs  Search.hs
Carnage/Carnage/Internal/: Squeeze.hs
app/: Main.hs
test/: Spec.hs
